# haskell-things

MortgageCalc/: MortgageCalc.cabal  README.md
MortgageCalc/app/: MainCmdLine.hs
MortgageCalc/standalone/: MortgageCalcStandalone.cabal  stack.yaml
MortgageCalc/standalone/app/: Main.hs  MainCmdLine.hs
MortgageCalc/standalone/src/: MortgageCalc.lhs
MortgageCalc/web/: MortgageCalcWeb.cabal  index.html  stack.yaml
MortgageCalc/web/app/: Main.hs  MainWeb.hs
broken-sword-lock-puzzle/: lock-puzzle-v2.lhs  lock-puzzle.lhs
fwt/: fwt.cabal  fwt.hs
misc/: ne.hs  transpose.hs  ycomb.hs  ycomb.py
mortgage-calc/: MainCmdLine.hs  MortgageCalc.lhs
