name:           FindWithTimestamps
version:        0.1
synopsis:       Just a handy utility
author:         Harry Pan
license:        MIT
build-type:     Simple
cabal-version:  >= 1.2

executable fwt
  build-depends: base, process >= 1.3.0.0, split >= 0.2.2, time >= 1.5.0.1
  main-is:        fwt.hs
  hs-source-dirs: .

