name:                MortgageCalcWeb
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/MortgageCalc#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MortgageCalc
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable MortgageCalc
  hs-source-dirs:      app
  main-is:             MainWeb.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , flow >= 1.0.7
                     , ghcjs-dom >= 0.7.0.4
                     , ghcjs-dom-webkit >= 0.7.0.3
                     , mtl >= 2.2.1
                     , text >= 1.2.2
                     , MortgageCalcWeb
  default-language:    Haskell2010

test-suite MortgageCalc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , MortgageCalcWeb
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/MortgageCalc
